--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     #pinkboard {
       z-index: 1;
     }
+
+    /* 🌸 Dòng chữ chúc mừng */
     #message {
       position: fixed;
       bottom: 40px;
@@ -37,18 +39,44 @@
       animation: sparkle 2s infinite alternate ease-in-out;
       font-family: "Segoe UI", "Poppins", sans-serif;
       letter-spacing: 1.2px;
-      z-index: 3;
+      z-index: 2;
     }
+
     @keyframes sparkle {
       0% { opacity: 0.7; text-shadow: 0 0 8px #fff, 0 0 16px #ff69b4, 0 0 25px #ff1493; }
       50% { opacity: 1; text-shadow: 0 0 14px #fff, 0 0 24px #ffb6c1, 0 0 40px #ff69b4; }
       100% { opacity: 0.8; text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff1493; }
     }
-    iframe {
-      position: absolute;
-      width: 0;
-      height: 0;
+
+    /* 🔘 Nút nhạc */
+    #musicBtn {
+      position: fixed;
+      bottom: 100px;
+      right: 40px;
+      background: rgba(255,182,193,0.9);
       border: none;
+      border-radius: 50px;
+      padding: 12px 20px;
+      font-size: 18px;
+      color: #fff;
+      text-shadow: 0 0 8px #ff69b4;
+      cursor: pointer;
+      box-shadow: 0 0 15px #ff1493;
+      transition: all 0.3s ease;
+      z-index: 5;
+    }
+    #musicBtn:hover {
+      background: #ff69b4;
+      transform: scale(1.1);
+    }
+
+    /* ✨ Hiệu ứng phát sáng khi nhạc đang bật */
+    .playing {
+      animation: glow 1.2s infinite alternate;
+    }
+    @keyframes glow {
+      0% { box-shadow: 0 0 10px #ff69b4, 0 0 20px #ff1493; }
+      100% { box-shadow: 0 0 25px #ffb6c1, 0 0 45px #ff69b4; }
     }
   </style>
 </head>
@@ -58,14 +86,18 @@
   <!-- Trái tim -->
   <canvas id="pinkboard"></canvas>
 
-  <!-- Dòng chữ chúc mừng -->
+  <!-- Dòng chữ -->
   <div id="message">
     💖 Chúc các bạn Khả Nhi, Ngô Nghi, Thùy An, Ngọc Doanh, Quỳnh Anh 20/10 vui vẻ, lấp lánh nha 💖
   </div>
 
-  <!-- Nhạc nền YouTube tự động phát -->
-  <iframe 
-    src="https://www.youtube.com/embed/vXkdrjhPGKs?autoplay=1&loop=1&playlist=vXkdrjhPGKs"
+  <!-- 🔘 Nút nhạc -->
+  <button id="musicBtn">🎵 Bật nhạc</button>
+
+  <!-- 🎶 Trình phát nhạc ẩn -->
+  <iframe id="musicFrame"
+    src="https://www.youtube.com/embed/vXkdrjhPGKs?enablejsapi=1&mute=0&loop=1&playlist=vXkdrjhPGKs"
+    style="width:0;height:0;border:none;"
     allow="autoplay"
   ></iframe>
 
@@ -73,26 +105,12 @@
   <script>
     const canvasStars = document.getElementById('stars');
     const ctxStars = canvasStars.getContext('2d');
-
-    let w = window.innerWidth;
-    let h = window.innerHeight;
-    canvasStars.width = w;
-    canvasStars.height = h;
-
-    let stars = [];
-    let shootingStars = [];
-
-    // Tạo sao tĩnh lấp lánh
+    let w = window.innerWidth, h = window.innerHeight;
+    canvasStars.width = w; canvasStars.height = h;
+    let stars = [], shootingStars = [];
     for (let i = 0; i < 250; i++) {
-      stars.push({
-        x: Math.random() * w,
-        y: Math.random() * h,
-        radius: Math.random() * 1.3,
-        alpha: Math.random(),
-        alphaChange: 0.02 + Math.random() * 0.02
-      });
+      stars.push({x: Math.random()*w, y: Math.random()*h, radius: Math.random()*1.3, alpha: Math.random(), alphaChange: 0.02 + Math.random()*0.02});
     }
-
     function drawStars() {
       for (let s of stars) {
         ctxStars.beginPath();
@@ -103,40 +121,28 @@
         if (s.alpha <= 0 || s.alpha >= 1) s.alphaChange *= -1;
       }
     }
-
     function createShootingStar() {
-      shootingStars.push({
-        x: w + 200,
-        y: Math.random() * h * 0.7,
-        len: 250 + Math.random() * 150,
-        speed: 12 + Math.random() * 8,
-        size: 1.5 + Math.random() * 1.5,
-        alpha: 1
-      });
+      shootingStars.push({x: w + 200, y: Math.random()*h*0.7, len: 250 + Math.random()*150, speed: 12 + Math.random()*8, size: 1.5 + Math.random()*1.5, alpha: 1});
     }
-
     function drawShootingStars() {
       for (let i = 0; i < shootingStars.length; i++) {
         const s = shootingStars[i];
         const grad = ctxStars.createLinearGradient(s.x, s.y, s.x - s.len, s.y + s.len * 0.3);
         grad.addColorStop(0, `rgba(255,255,255,${s.alpha})`);
-        grad.addColorStop(0.3, `rgba(255,255,200,${s.alpha * 0.8})`);
+        grad.addColorStop(0.3, `rgba(255,255,200,${s.alpha*0.8})`);
         grad.addColorStop(1, `rgba(255,255,255,0)`);
-
         ctxStars.strokeStyle = grad;
         ctxStars.lineWidth = s.size;
         ctxStars.beginPath();
         ctxStars.moveTo(s.x, s.y);
         ctxStars.lineTo(s.x - s.len, s.y + s.len * 0.3);
         ctxStars.stroke();
-
         s.x -= s.speed;
         s.y += s.speed * 0.3;
         s.alpha -= 0.01;
         if (s.alpha <= 0) shootingStars.splice(i, 1);
       }
     }
-
     function animateStars() {
       ctxStars.clearRect(0, 0, w, h);
       drawStars();
@@ -144,211 +150,54 @@
       if (Math.random() < 0.07) createShootingStar();
       requestAnimationFrame(animateStars);
     }
-
     animateStars();
-
-    window.addEventListener('resize', () => {
-      w = window.innerWidth;
-      h = window.innerHeight;
-      canvasStars.width = w;
-      canvasStars.height = h;
-    });
+    window.addEventListener('resize', () => { w = innerWidth; h = innerHeight; canvasStars.width = w; canvasStars.height = h; });
   </script>
 
-  <!-- 💖 Code trái tim gốc của bạn (giữ nguyên hoàn toàn) -->
+  <!-- 💖 Trái tim -->
   <script>
-  var settings = {
-    particles: {
-      length:   10000,
-      duration: 4,
-      velocity: 80,
-      effect:  -1.3,
-      size:     8,
-    },
-  };
+  var settings = {particles:{length:10000,duration:4,velocity:80,effect:-1.3,size:8}};
+  (function(){var b=0;var c=["ms","moz","webkit","o"];for(var a=0;a<c.length&&!window.requestAnimationFrame;++a){window.requestAnimationFrame=window[c[a]+"RequestAnimationFrame"];window.cancelAnimationFrame=window[c[a]+"CancelAnimationFrame"]||window[c[a]+"CancelRequestAnimationFrame"];}})();
 
-  (function(){var b=0;var c=["ms","moz","webkit","o"];
-  for(var a=0;a<c.length&&!window.requestAnimationFrame;++a){
-    window.requestAnimationFrame=window[c[a]+"RequestAnimationFrame"];
-    window.cancelAnimationFrame=window[c[a]+"CancelAnimationFrame"]||
-                                window[c[a]+"CancelRequestAnimationFrame"];}})
-  ();
+  var Point=function(x,y){this.x=x||0;this.y=y||0;};Point.prototype.clone=function(){return new Point(this.x,this.y);};Point.prototype.length=function(l){if(l===undefined)return Math.sqrt(this.x*this.x+this.y*this.y);this.normalize();this.x*=l;this.y*=l;return this;};Point.prototype.normalize=function(){var l=this.length();this.x/=l;this.y/=l;return this;};
 
-  var Point = (function() {
-    function Point(x, y) {
-      this.x = x || 0;
-      this.y = y || 0;
-    }
-    Point.prototype.clone = function() { return new Point(this.x, this.y); };
-    Point.prototype.length = function(length) {
-      if (length === undefined)
-        return Math.sqrt(this.x * this.x + this.y * this.y);
-      this.normalize();
-      this.x *= length; this.y *= length;
-      return this;
-    };
-    Point.prototype.normalize = function() {
-      var length = this.length();
-      this.x /= length; this.y /= length;
-      return this;
-    };
-    return Point;
-  })();
+  var Particle=function(){this.position=new Point();this.velocity=new Point();this.acceleration=new Point();this.age=0;};
+  Particle.prototype.initialize=function(x,y,dx,dy){this.position.x=x;this.position.y=y;this.velocity.x=dx;this.velocity.y=dy;this.acceleration.x=dx*settings.particles.effect;this.acceleration.y=dy*settings.particles.effect;this.age=0;};
+  Particle.prototype.update=function(dt){this.position.x+=this.velocity.x*dt;this.position.y+=this.velocity.y*dt;this.velocity.x+=this.acceleration.x*dt;this.velocity.y+=this.acceleration.y*dt;this.age+=dt;};
+  Particle.prototype.draw=function(ctx,img){function ease(t){return(--t)*t*t+1;}var size=img.width*ease(this.age/settings.particles.duration);ctx.globalAlpha=1-this.age/settings.particles.duration;ctx.drawImage(img,this.position.x-size/2,this.position.y-size/2,size,size);};
 
-  var Particle = (function() {
-    function Particle() {
-      this.position = new Point();
-      this.velocity = new Point();
-      this.acceleration = new Point();
-      this.age = 0;
-    }
-    Particle.prototype.initialize = function(x, y, dx, dy) {
-      this.position.x = x;
-      this.position.y = y;
-      this.velocity.x = dx;
-      this.velocity.y = dy;
-      this.acceleration.x = dx * settings.particles.effect;
-      this.acceleration.y = dy * settings.particles.effect;
-      this.age = 0;
-    };
-    Particle.prototype.update = function(deltaTime) {
-      this.position.x += this.velocity.x * deltaTime;
-      this.position.y += this.velocity.y * deltaTime;
-      this.velocity.x += this.acceleration.x * deltaTime;
-      this.velocity.y += this.acceleration.y * deltaTime;
-      this.age += deltaTime;
-    };
-    Particle.prototype.draw = function(context, image) {
-      function ease(t) { return (--t) * t * t + 1; }
-      var size = image.width * ease(this.age / settings.particles.duration);
-      context.globalAlpha = 1 - this.age / settings.particles.duration;
-      context.drawImage(image,
-        this.position.x - size / 2,
-        this.position.y - size / 2,
-        size, size);
-    };
-    return Particle;
-  })();
+  var ParticlePool=function(l){var p=new Array(l);for(var i=0;i<p.length;i++)p[i]=new Particle();var fa=0,ff=0,d=settings.particles.duration;this.add=function(x,y,dx,dy){p[ff].initialize(x,y,dx,dy);ff++;if(ff==p.length)ff=0;if(fa==ff)fa++;if(fa==p.length)fa=0;};this.update=function(dt){var i;if(fa<ff){for(i=fa;i<ff;i++)p[i].update(dt);}if(ff<fa){for(i=fa;i<p.length;i++)p[i].update(dt);for(i=0;i<ff;i++)p[i].update(dt);}while(p[fa].age>=d&&fa!=ff){fa++;if(fa==p.length)fa=0;}};this.draw=function(ctx,img){var i;if(fa<ff){for(i=fa;i<ff;i++)p[i].draw(ctx,img);}if(ff<fa){for(i=fa;i<p.length;i++)p[i].draw(ctx,img);for(i=0;i<ff;i++)p[i].draw(ctx,img);}};return this;};
 
-  var ParticlePool = (function() {
-    var particles, firstActive = 0, firstFree = 0,
-        duration = settings.particles.duration;
-
-    function ParticlePool(length) {
-      particles = new Array(length);
-      for (var i = 0; i < particles.length; i++)
-        particles[i] = new Particle();
-    }
-    ParticlePool.prototype.add = function(x, y, dx, dy) {
-      particles[firstFree].initialize(x, y, dx, dy);
-      firstFree++;
-      if (firstFree == particles.length) firstFree = 0;
-      if (firstActive == firstFree) firstActive++;
-      if (firstActive == particles.length) firstActive = 0;
-    };
-    ParticlePool.prototype.update = function(deltaTime) {
-      var i;
-      if (firstActive < firstFree) {
-        for (i = firstActive; i < firstFree; i++)
-          particles[i].update(deltaTime);
-      }
-      if (firstFree < firstActive) {
-        for (i = firstActive; i < particles.length; i++)
-          particles[i].update(deltaTime);
-        for (i = 0; i < firstFree; i++)
-          particles[i].update(deltaTime);
-      }
-      while (particles[firstActive].age >= duration && firstActive != firstFree) {
-        firstActive++;
-        if (firstActive == particles.length) firstActive = 0;
-      }
-    };
-    ParticlePool.prototype.draw = function(context, image) {
-      var i;
-      if (firstActive < firstFree) {
-        for (i = firstActive; i < firstFree; i++)
-          particles[i].draw(context, image);
-      }
-      if (firstFree < firstActive) {
-        for (i = firstActive; i < particles.length; i++)
-          particles[i].draw(context, image);
-        for (i = 0; i < firstFree; i++)
-          particles[i].draw(context, image);
-      }
-    };
-    return ParticlePool;
-  })();
-
-  (function(canvas) {
-    var context = canvas.getContext('2d'),
-        particles = new ParticlePool(settings.particles.length),
-        particleRate = settings.particles.length / settings.particles.duration,
-        time;
-
-    function pointOnHeart(t) {
-      return new Point(
-        160 * Math.pow(Math.sin(t), 3),
-        130 * Math.cos(t) - 50 * Math.cos(2 * t) -
-        20 * Math.cos(3 * t) - 10 * Math.cos(4 * t) + 25
-      );
-    }
-
-    var image = (function() {
-      var canvas = document.createElement('canvas'),
-          context = canvas.getContext('2d');
-      canvas.width = settings.particles.size;
-      canvas.height = settings.particles.size;
-      function to(t) {
-        var point = pointOnHeart(t);
-        point.x = settings.particles.size / 2 + point.x * settings.particles.size / 350;
-        point.y = settings.particles.size / 2 - point.y * settings.particles.size / 350;
-        return point;
-      }
-      context.beginPath();
-      var t = -Math.PI;
-      var point = to(t);
-      context.moveTo(point.x, point.y);
-      while (t < Math.PI) {
-        t += 0.01;
-        point = to(t);
-        context.lineTo(point.x, point.y);
-      }
-      context.closePath();
-      context.fillStyle = '#f50b02';
-      context.fill();
-      var image = new Image();
-      image.src = canvas.toDataURL();
-      return image;
-    })();
-
-    function render() {
-      requestAnimationFrame(render);
-      var newTime = new Date().getTime() / 1000,
-          deltaTime = newTime - (time || newTime);
-      time = newTime;
-      context.clearRect(0, 0, canvas.width, canvas.height);
-      var amount = particleRate * deltaTime;
-      for (var i = 0; i < amount; i++) {
-        var pos = pointOnHeart(Math.PI - 2 * Math.PI * Math.random());
-        var dir = pos.clone().length(settings.particles.velocity);
-        particles.add(canvas.width / 2 + pos.x,
-                      canvas.height / 2 - pos.y,
-                      dir.x, -dir.y);
-      }
-      particles.update(deltaTime);
-      particles.draw(context, image);
-    }
-
-    function onResize() {
-      canvas.width = canvas.clientWidth;
-      canvas.height = canvas.clientHeight;
-    }
-    window.onresize = onResize;
-    setTimeout(function() {
-      onResize();
-      render();
-    }, 10);
+  (function(canvas){var ctx=canvas.getContext('2d'),pool=new ParticlePool(settings.particles.length),rate=settings.particles.length/settings.particles.duration,time;
+    function pointOnHeart(t){return new Point(160*Math.pow(Math.sin(t),3),130*Math.cos(t)-50*Math.cos(2*t)-20*Math.cos(3*t)-10*Math.cos(4*t)+25);}
+    var img=(function(){var c=document.createElement('canvas'),ctx=c.getContext('2d');c.width=settings.particles.size;c.height=settings.particles.size;
+      function to(t){var p=pointOnHeart(t);p.x=settings.particles.size/2+p.x*settings.particles.size/350;p.y=settings.particles.size/2-p.y*settings.particles.size/350;return p;}
+      ctx.beginPath();var t=-Math.PI,p=to(t);ctx.moveTo(p.x,p.y);while(t<Math.PI){t+=0.01;p=to(t);ctx.lineTo(p.x,p.y);}ctx.closePath();ctx.fillStyle='#f50b02';ctx.fill();var img=new Image();img.src=c.toDataURL();return img;})();
+    function render(){requestAnimationFrame(render);var nt=new Date().getTime()/1000,dt=nt-(time||nt);time=nt;ctx.clearRect(0,0,canvas.width,canvas.height);var amount=rate*dt;for(var i=0;i<amount;i++){var pos=pointOnHeart(Math.PI-2*Math.PI*Math.random());var dir=pos.clone().length(settings.particles.velocity);pool.add(canvas.width/2+pos.x,canvas.height/2-pos.y,dir.x,-dir.y);}pool.update(dt);pool.draw(ctx,img);}
+    function onResize(){canvas.width=canvas.clientWidth;canvas.height=canvas.clientHeight;}window.onresize=onResize;setTimeout(function(){onResize();render();},10);
   })(document.getElementById('pinkboard'));
+  </script>
+
+  <!-- 🎵 Script điều khiển nhạc -->
+  <script>
+    const btn = document.getElementById('musicBtn');
+    const iframe = document.getElementById('musicFrame');
+    let isPlaying = false;
+    function postCommand(cmd){
+      iframe.contentWindow.postMessage(JSON.stringify({event:'command',func:cmd,args:[]}), '*');
+    }
+    btn.onclick = function(){
+      if(isPlaying){
+        postCommand('pauseVideo');
+        btn.textContent = '🎵 Bật nhạc';
+        btn.classList.remove('playing');
+      } else {
+        postCommand('playVideo');
+        btn.textContent = '🔇 Tắt nhạc';
+        btn.classList.add('playing');
+      }
+      isPlaying = !isPlaying;
+    };
   </script>
 </body>
 </html>
